deploymentfile/frontend/onlineshop-frontend-deployment.yaml
####################################################
#  OnlineShop FrontEnd Deployment
####################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlineshop-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlineshop-frontend
  template:
    metadata:
      labels:
        app: onlineshop-frontend
    spec:
      containers:
      - name: onlineshop-frontend
        image: adithilokhande/onlinebookshopfrontend:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"  
        ports:
        - containerPort: 8080
---

####################################################
# OnlineShop FrontEnd Service
####################################################
apiVersion: v1
kind: Service
metadata:
  name: onlineshop-frontend
spec:
  selector:
    app: onlineshop-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
