deploymentfile/frontend/onlineshop-frontend-gateway.yaml
#######################################################
# OnlineShop Backend Gateway
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineshop-frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
#######################################################
# OnlineShop Backend Virtual Service Account
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlineshop-frontend-virtual-service
spec:
  gateways:
  - onlineshop-frontend-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /onlineshop-ui
    route:
    - destination:
        host: onlineshop-frontend
        port:
          number: 80

#---
